<resources>
    <!-- 版本号-->
    <string name="helpcenter_currentversion_content">1.0.5</string>
    <!-- 区号demo用到的string-->
    <string name="smssdk_search">搜索</string>

    <string name="app_name">秒泊车位锁</string>
    <string name="country_plus">+</string>
    <string name="default_country_id">86</string>
    <string name="default_country_zone">+86</string>
    <string name="login_text">登录</string>
    <string name="login_forgerpwd_text">忘记密码</string>
    <string name="login_phone_text">手机号</string>
    <string name="login_password_text">密码</string>
    <string name="login_password_show">显示</string>
    <string name="login_password_hide">隐藏</string>
    <string name="login_register_text">立即注册</string>
    <string name="setting_name_text">名字</string>
    <string name="setting_phone_text">13226523365</string>
    <string name="setting_lockmanager_text">地锁管理</string>
    <string name="setting_helpcenter_text">帮助中心</string>
    <string name="setting_share_text">分享给好友</string>
    <string name="setting_systemmsg_text">系统消息</string>
    <string name="register_title_text">注册</string>
    <string name="register_content_text">请输入您的电话号码以获取验证码</string>
    <string name="register_phone_text">手机号</string>
    <string name="register_phone_zone">+86</string>
    <string name="authcode_title_text">输入验证码</string>
    <string name="authcode_content_text1">我们向</string>
    <string name="authcode_content_text2">发送了一个验证码。请在该消息中输入验证码。</string>
    <string name="authcode_content_text3">我们向13861191968发送了一个验证码。请在该消息中输入验证码。</string>
    <string name="authcode_authcode_text">验证码</string>
    <string name="createpwd_title_text">创建密码</string>
    <string name="createpwd_content_text">密码长度至少为8个字符。</string>
    <string name="createpwd_createpwd_text">密码</string>
    <string name="createpwd_show_text">显示</string>
    <string name="createpwd_hide_text">隐藏</string>
    <string name="forgetpwd_title_text">忘记密码?</string>
    <string name="forgetpwd_content_text">请输入您的电话号码以获取验证码</string>
    <string name="forgetpwd_phone_text">手机号</string>
    <string name="forgetpwd_phone_zone">+86</string>
    <string name="lockmanager_title_text">地锁管理</string>
    <string name="lockmanager_add_text">添加</string>
    <string name="lockmanager_content_text">你目前没有地锁，你可以\n进行设备配对或扫码配对添加地锁</string>
    <string name="lockmanager_devicepair_text">设备配对</string>
    <string name="lockmanager_scanpair_text">扫描配对</string>
    <string name="lockmanager_cancle_text">取消</string>
    <string name="systemmsg_title_text">系统消息</string>
    <string name="systemmsg_date_text">10-13 18:34</string>
    <string name="systemmsg_content_text">恭喜你获得抽奖机会！红包飞来不等人，抽奖机会人人有，快来试试手气吧！（点击服务火丁广告进行参与）</string>
    <string name="locklist_title_text">地锁管理</string>
    <string name="locklist_item_name">SSD102</string>
    <string name="locklist_item_status_notconnect">未连接</string>
    <string name="locklist_item_status_connected">已连接</string>
    <string name="locklist_scan_text">搜索设备中，请稍候...</string>
    <string name="locklist_nodevice_text">没有搜索到设备</string>
    <string name="lockdetails_title_text">锁的名字</string>
    <string name="lockdetails_delete_text">删除</string>
    <string name="lockdetails_connectstatus_title">连接状态</string>
    <string name="lockdetails_connectstatus_notconnect">未连接</string>
    <string name="lockdetails_connectstatus_connected">已连接</string>
    <string name="lockdetails_battery_title">电量</string>
    <string name="lockdetails_battery_high">高</string>
    <string name="lockdetails_battery_middle">中</string>
    <string name="lockdetails_battery_low">低</string>
    <string name="lockdetails_battery_no">没电</string>
    <string name="lockdetails_changepassword_title">修改车锁密码</string>
    <string name="lockdetails_commentstatus_title">当前状态</string>
    <string name="lockdetails_commentstatus_error">状态异常</string>
    <string name="lockdetails_commentstatus_open">开启</string>
    <string name="lockdetails_commentstatus_close">关闭</string>
    <string name="lockdetails_commentstatus_rising">正在上升</string>
    <string name="lockdetails_commentstatus_droping">正在下降</string>
    <string name="lockdetails_openlock">开锁</string>
    <string name="lockdetails_querystatus">查询状态</string>
    <string name="lockdetails_changepassword">修改密码</string>
    <string name="lockdetails_closelock">关锁</string>
    <string name="helpcenter_title_text">帮助中心</string>
    <string name="helpcenter_handleguide_title">操作指南</string>
    <string name="helpcenter_faultremove_title">故障排除</string>
    <string name="helpcenter_customerphone_title">客服电话</string>
    <string name="helpcenter_customerphone_content">400-4000-4000</string>
    <string name="helpcenter_useragreement_title">用户协议</string>
    <string name="helpcenter_currentversion_title">当前版本</string>
    <string name="personal_title_text">个人设置</string>
    <string name="personal_head_title">头像</string>
    <string name="personal_nickname_title">昵称</string>
    <string name="personal_nickname_content">小泊</string>
    <string name="personal_sex_title">性别</string>
    <string name="personal_sex_male">男</string>
    <string name="personal_sex_female">女</string>
    <string name="personal_age_title">年龄</string>
    <string name="personal_age_content">1970-03-01</string>
    <string name="personal_phone_title">手机号码</string>
    <string name="personal_phone_content">+8613656120976</string>
    <string name="personal_logout_title">退出登录</string>
    <string name="personal_save_text">保存</string>
    <string name="icon_camera_text">打开相机</string>
    <string name="icon_album_text">打开相册</string>
    <string name="nickname_title_text">昵称</string>
    <string name="nickname_hint_text">请输入昵称</string>
    <string name="sex_title_text">性别</string>
    <string name="sex_hint_text">请选择性别</string>
    <string name="age_title_text">年龄</string>
    <string name="age_hint_text">请选择年龄</string>
    <string name="phone_title_text">手机号</string>
    <string name="phone_hint_text">请输入手机号</string>

    <!-- 加载进度条的提示-->
    <string name="loading_dialog_text">加载中...</string>
    <string name="connecting_dialog_text">连接中...</string>
    <string name="searching_dialog_text">搜索设备中...</string>
    <!-- 网络异常-->
    <string name="internet_error_text">网络异常！</string>

    <!-- 车锁的密码框-->
    <string name="lock_pair_title">配对</string>
    <string name="lock_pair_content">请输入配对密码</string>
    <!-- 设备配对-->
    <string name="lock_pair_failed">配对失败</string>
    <string name="lock_pair_success">配对成功</string>
    <string name="lock_pair_cancle">取消配对</string>

    <!-- 设备详情页-->
    <string name="lockdetails_notconnect">设备未连接</string>
    <string name="lock_query_failed">查询状态失败</string>
    <string name="lock_query_success">查询状态成功</string>
    <!-- 修改设备密码-->
    <string name="lockdetails_changepwd_old_title">修改密码</string>
    <string name="lockdetails_changepwd_old_content">请输入设备旧密码</string>
    <string name="lockdetails_changepwd_new_title">新密码</string>
    <string name="lockdetails_changepwd_new_content">请设置新密码</string>
    <string name="lockdetails_changepwd_newagain_title">确认新密码</string>
    <string name="lockdetails_changepwd_newagain_content">请再次输入新密码</string>
    <string name="lockdetails_change_success">修改密码成功</string>
    <string name="lockdetails_change_failed">修改密码失败</string>
    <!-- 开锁-->
    <string name="lockdetails_open_isopened">锁是开启状态</string>
    <string name="lockdetails_open_failed">开锁失败</string>
    <string name="lockdetails_open_success">开锁成功</string>
    <string name="lockdetails_open_error">锁状态异常</string>
    <string name="lockdetails_open_isclosed">锁是关闭状态</string>
    <string name="lockdetails_open_rising">锁上升中</string>
    <string name="lockdetails_open_droping">锁下降中</string>
    <string name="lockdetails_open_isrising">锁上升中...</string>
    <string name="lockdetails_open_isdroping">锁下降中...</string>
    <!-- 关锁-->
    <string name="lockdetails_close_isopened">锁是开启状态</string>
    <string name="lockdetails_close_failed">关锁失败</string>
    <string name="lockdetails_close_success">关锁成功</string>
    <string name="lockdetails_close_error">锁状态异常</string>
    <string name="lockdetails_close_isclosed">锁是关闭状态</string>
    <string name="lockdetails_close_rising">锁上升中</string>
    <string name="lockdetails_close_droping">锁下降中</string>
    <string name="lockdetails_close_isrising">锁上升中...</string>
    <string name="lockdetails_close_isdroping">锁下降中...</string>

    <!-- 主页开锁-->
    <string name="main_no_device">没有已配对的地锁</string>
    <string name="main_no_connected">地锁未连接</string>

    <!-- MyApplication-->
    <string name="app_bluetooth_notopen">蓝牙没有打开</string>
    <string name="app_bluetooth_isclosed">蓝牙已关闭</string>

    <!-- 分享-->
    <string name="share_content">共享停车位，借助共享经济模式，让车位不再空闲，让车主不再找不到车位，通过APP一键分享、预约车位，以缓解城市停车难的问题，解决人们开车出门没有车位的顾虑。</string>
    <string name="share_success">分享成功</string>
    <string name="share_error">分享失败</string>
    <string name="share_cancel">分享取消</string>
</resources>
