<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 返回按钮和标题-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/yellowBackground">

        <RelativeLayout
            android:id="@+id/phoneBackRL"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_iv"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_title_text"
            android:textSize="18sp"
            android:textColor="@color/blueBackground"
            android:layout_centerInParent="true"/>


    </RelativeLayout>

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint_text"
        android:textSize="18sp"
        android:layout_marginTop="17dp"
        android:paddingLeft="25dp"
        android:paddingTop="17dp"
        android:paddingRight="25dp"
        android:paddingBottom="17dp"
        android:background="@null"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lockdetail_devider"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <!-- 保存按钮-->
    <TextView
        android:id="@+id/phoneSaveTV"
        android:layout_width="281dp"
        android:layout_height="36dp"
        android:background="@drawable/personal_save_bg"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/personal_save_text"
        android:textColor="@color/blueBackground"
        android:textSize="15sp"
        android:layout_marginTop="50dp"/>

</LinearLayout>